--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "cdn"
 version = "0.1.0"
 edition = "2021"
+authors = ["mashanz <tech@mashanz.com>"]
+description = "Serve Static like CDN LOL"
+readme = "README.md"
+homepage = "https://x.com/papanberjalan"
+repository = "https://github.com/mashanz/cdn"
+license = "MIT"
+keywords = ["tools", "cdn"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 actix-files = "0.6.6"
