--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cdn"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["mashanz <tech@mashanz.com>"]
 description = "Serve Static like CDN LOL"
@@ -14,3 +14,5 @@ categories = ["command-line-utilities"]
 [dependencies]
 actix-files = "0.6.6"
 actix-web = "4.9.0"
+env_logger = "0.11.5"
+log = "0.4.22"
