--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cdn"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 authors = ["mashanz <tech@mashanz.com>"]
 description = "Serve Static like CDN LOL"
@@ -12,6 +12,7 @@ keywords = ["tools", "cdn"]
 categories = ["command-line-utilities"]
 
 [dependencies]
+actix-cors = "0.7.0"
 actix-files = "0.6.6"
 actix-web = "4.9.0"
 env_logger = "0.11.5"
